# anotherdevblog

./: .env  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: app.py
backend/app/api/: router.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: articles.py
backend/app/core/: config.py  logger.py
backend/app/db/: models.py  session.py
backend/app/schemas/: schemas.py
