[tool.poetry]
name = "Blog"
version = "0.1.0"
description = ""
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.114.2"
sqlalchemy = "^1.4.22"
uvicorn = "^0.15.0"
python-dotenv = "^0.19.0"
psycopg2-binary = "^2.9.9"
pydantic = "^2.9.1" 

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"